--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "ng",
   "version": "0.0.0",
   "dependencies": {
-    "grunt": "^0.4.1",
     "gzippo": "~0.2.0",
     "express": "~4.8.2",
-    "logfmt": "1.1.2"
+    "logfmt": "1.1.2",
+    "grunt": "^0.4.1",
+    "grunt-cli": "0.1.13"
   },
   "devDependencies": {
     "grunt-autoprefixer": "^0.7.3",
