--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "express": "~4.8.2",
     "logfmt": "1.1.2",
     "grunt": "^0.4.1",
-    "grunt-cli": "0.1.13"
-  },
-  "devDependencies": {
+    "grunt-cli": "0.1.13",
+    "load-grunt-tasks": "^0.4.0",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
@@ -29,9 +28,10 @@
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
+    "time-grunt": "^0.3.1"
+  },
+  "devDependencies": {
     "jshint-stylish": "^0.2.0",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1",
     "grunt-karma": "~0.8.3",
     "karma-phantomjs-launcher": "~0.1.4",
     "karma": "~0.12.21",
