--- a/package.json
+++ b/package.json
@@ -28,20 +28,19 @@
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
-    "time-grunt": "^0.3.1"
-  },
-  "devDependencies": {
+    "time-grunt": "^0.3.1",
     "jshint-stylish": "^0.2.0",
     "grunt-karma": "~0.8.3",
     "karma-phantomjs-launcher": "~0.1.4",
     "karma": "~0.12.21",
     "karma-jasmine": "~0.1.5"
   },
+  "devDependencies": {},
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
     "test": "grunt test",
-    "postinstall": "echo postinstall time; ./node_modules/grunt-cli/bin/grunt build"
+    "postinstall": "grunt build"
   }
 }
