--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "postinstall": "grunt build"
+    "postinstall": "cd app; grunt build"
   }
 }
