--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test",
-    "postinstall": "./node_modules/.bin/grunt build"
+    "test": "grunt test"
   }
 }
